REGRESSION(r221839): Fix requests with FormData containing empty files https://bugs.webkit.org/show_bug.cgi?id=184490 <rdar://problem/39385169>

Patch by Tadeu Zagallo <tzagallo@apple.com> on 2018-04-24
Reviewed by Geoffrey Garen.

Source/WebCore:

We should not append the blob to the FormData when it is a file but has no path. It broke
the submission since the request was failing to read the file in FormDataStreamCFNet.h:156

Test: http/tests/local/formdata/send-form-data-with-empty-file.html

* platform/network/FormData.cpp:
(WebCore::FormData::appendMultiPartFileValue):

LayoutTests:

Verify that the final boundary is present in the request body when submitting FormData containing an empty file.

* http/tests/local/formdata/send-form-data-with-empty-file-expected.txt: Added.
* http/tests/local/formdata/send-form-data-with-empty-file.html: Added.

Canonical link: https://commits.webkit.org/200436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230963 268f45cc-cd09-0410-ab3c-d52691b4dbfc